--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+        <title>Document</title>
     <link rel="stylesheet" href="/style.css">
-    <script src="jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet">
 </head>
 <body>
+</head>
+<body>
+<section class="container1">
 <nav>
     <div class="logo">Brand</div>
     <label for="" class="menu-btn">
@@ -23,21 +26,128 @@
         <li><a href="#">Home</a></li>
     </ul>
 </nav>
+</section>
 
 <div class="hero">
 <div class="hero-sec">
-    <p>For it is in the <br><b>giving that</b> <br>we receive</p>
+    <div class="text">
+    <p class="fadeInUp-animation">For it is in the <br><b>giving that</b> <br>we receive</p>
+    </div>
     <button class="button1">Join Us</button>
     <button class="button2">Join Us</button>
-
-    <div class="signup" >
-     <p>hello</p>
-    </div>
 </div>
 <div class="hero-image">
-    <img class="image-fade" src="https://images.unsplash.com/photo-1578357078586-491adf1aa5ba?q=80&w=3328&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="100%" height="100%">
+    <img class="image-fade" src="https://images.unsplash.com/photo-1628087730636-ac461db242fc?q=80&w=3387&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="100%" height="100%">
 </div>
 </div>
+<!-- info -->
+<div class="section2">
+    <div class="firstbox">
+        <div class="div1">
+            <h1 class="fadeInUp-animation">150+</h1>
+            <h3 class="fadeInUp-animation">Donations+</h3>
+
+
+        </div>
+        <div class="div2">
+            <h1 class="fadeInUp-animation">100+</h1>
+            <h3 class="fadeInUp-animation">Volunteers</h3>
+
+
+        </div>
+        <div class="div3">
+            <h1 class="fadeInUp-animation">06+</h1>
+            <h5 class="fadeInUp-animation">Campaigns Conducted</h5>
+
+
+        </div>
+        <div class="div3">
+            <h1 class="fadeInUp-animation">150+</h1>
+            <h4 class="fadeInUp-animation">Campaigns Conducted</h4>
+
+
+        </div>
+    </div>
+    <!-- <div class="secondbox fadeInUp-animation"">
+        <div class="div3">
+            <div class="div1">
+                <h1>150+</h1>
+                <h3>Donations+</h3>
+    
+    
+            </div> -->
+        </div>
+    </div>
+</div>
+
+<div class="image-div">
+    <div class="content">
+    <div class="image-div-main">
+       <div class="image-div1">
+        <p>heloo</p>
+
+       </div>
+        <div class="image-div2">
+            <div class="image-div2-1">
+                <p class="highlight-1">Donate for Education</p>
+                <p class="highlight-2">Donate stationery infrastructure, midday meal or books</p>
+                <button id="button-div">Sign up</button>
+            </div>
+            <div class="image-div2-2"><p>hello</p></div>
+        </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- info2 -->
+
+
+<div class="container-scroll-main">
+<div class="container-scroll" speed=70>
+    <div class='scrolling-text'>
+      <h2 class="scrolling-text-content">“Never Doubt that a small group of thoughtful, committed youths can change the world. Indeed it’s the only thing that ever has.”</h2>
+    </div>
+  </div>
+</div>
+
+
+<!-- accordion -->
+<div class="accordinsection">
+    <div class="accordinsection-1">
+<p>About us</p>
+    </div>
+    <div class="accordinsection-2">
+<button class="accordion">Who We Are</button>
+<div class="panel">
+  <p>“Never Doubt that a small group of thoughtful, committed youths can change the world. Indeed it’s 
+    the only thing that ever has.” This defines - Dhatri Patra, a non-governmental organisation serving 
+    for basic requirements of individuals and animals, to uplift their standards of living. We have a 
+    vision that brings hope, a mission that brings a change and values that brings integrity.</p>
+</div>
+
+<button class="accordion">Section 2</button>
+<div class="panel">
+  <p>Content for section 2...</p>
+</div>
+
+<button class="accordion">Section 3</button>
+<div class="panel">
+  <p>Content for section 3...</p>
+</div>
+</div>
+</div>
+
+<!-- Testing the Instagram Embed code added today -->
+
+<div class="instagram">
+<!-- <iframe src="//instagram.com/p/bOTI1cPY7z/embed/" width="612" height="710" frameborder="0" scrolling="no" allowtransparency="true"></iframe> -->
+<iframe width="50%" height="540px" src="https://www.youtube.com/embed/QsP7u9ecFf0?si=1EvIfzrHhP1paiQx&autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+
+</body>
+<script src="/script.js"></script>
+
 
 </body>
 </html>
