--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
         <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet"> -->
 </head>
 <body>
 
-    
+
 <section class="container1">
 <nav>
     <div class="logo">Brand</div>
@@ -146,7 +146,7 @@
 </div>
 
 
-<script src="/script.js"></script>
+<script src="script.js"></script>
 
 
 </body>
