--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    
+
 <section class="container1">
 <nav>
     <div class="logo">Brand</div>
@@ -147,7 +147,7 @@
 </div>
 
 
-<script src="/script.js"></script>
+<script src="script.js"></script>
 
 
 </body>
