--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet">
+<!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Inter:wght@100..900&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0ee8f60b6c.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -32,7 +38,8 @@
 <div class="hero">
 <div class="hero-sec">
     <div class="text">
-    <p class="fadeInUp-animation">For it is in the <br><b>giving that</b> <br>we receive</p>
+    <p class="fadeInUp-animation">For it is in the <br><b><i class="fa-solid fa-hand-holding-hand"></i> giving that</b> <br>we receive <i class="fa-solid fa-circle-arrow-down"></i></p>
+    <h6 class="fadeInUp-animation">Welcome to our community! At [Company Name], we believe in the transformative<br> power of generosity. For it is in the giving that we receive. Every interaction, every<br> contribution, and every act of kindness enriches not only the giver but also the world<br> around us. Join us as we embark on a journey of compassion, connection, and collective<br> impact. Together, let's make a difference, one heartfelt gesture at a time.</h6>
     </div>
     <button class="button1">Join Us</button>
     <button class="button2">Join Us</button>
@@ -45,25 +52,25 @@
 <div class="section2">
     <div class="firstbox">
         <div class="div1">
-            <h1 class="fadeInUp-animation">150+</h1>
+            <h1 class="fadeInUp-animation">+150<i class="fa-solid fa-hand-holding-dollar"></i></h1>
             <h3 class="fadeInUp-animation">Donations+</h3>
 
 
         </div>
         <div class="div2">
-            <h1 class="fadeInUp-animation">100+</h1>
+            <h1 class="fadeInUp-animation">+100<i class="fa-solid fa-handshake-angle"></i></h1>
             <h3 class="fadeInUp-animation">Volunteers</h3>
 
 
         </div>
         <div class="div3">
-            <h1 class="fadeInUp-animation">06+</h1>
+            <h1 class="fadeInUp-animation">+06<i class="fa-solid fa-person-shelter"></i></h1>
             <h5 class="fadeInUp-animation">Campaigns Conducted</h5>
 
 
         </div>
-        <div class="div3">
-            <h1 class="fadeInUp-animation">150+</h1>
+        <div class="div4">
+            <h1 class="fadeInUp-animation">+10k<i class="fa-solid fa-plate-wheat"></i></h1>
             <h4 class="fadeInUp-animation">Campaigns Conducted</h4>
 
 
@@ -90,7 +97,7 @@
        </div>
         <div class="image-div2">
             <div class="image-div2-1">
-                <p class="highlight-1">Donate for Education</p>
+                <p class="highlight-1">Donate for Education <i class="fa-solid fa-book-open-reader"></i></p>
                 <p class="highlight-2">Donate stationery infrastructure, midday meal or books</p>
                 <button id="button-div">Sign up</button>
             </div>
@@ -103,14 +110,14 @@
 
 <!-- info2 -->
 
-
+<!-- 
 <div class="container-scroll-main">
 <div class="container-scroll" speed=70>
     <div class='scrolling-text'>
       <h2 class="scrolling-text-content">“Never Doubt that a small group of thoughtful, committed youths can change the world. Indeed it’s the only thing that ever has.”</h2>
     </div>
   </div>
-</div>
+</div> -->
 
 
 <!-- accordion -->
@@ -119,7 +126,7 @@
 <p>About us</p>
     </div>
     <div class="accordinsection-2">
-<button class="accordion">Who We Are</button>
+<button class="accordion">Mission <i class="fa-solid fa-bullseye"></i></button>
 <div class="panel">
   <p>“Never Doubt that a small group of thoughtful, committed youths can change the world. Indeed it’s 
     the only thing that ever has.” This defines - Dhatri Patra, a non-governmental organisation serving 
@@ -127,12 +134,14 @@
     vision that brings hope, a mission that brings a change and values that brings integrity.</p>
 </div>
 
-<button class="accordion">Section 2</button>
+<button class="accordion">02. Vision <i class="fa-solid fa-dog"></i></button>
 <div class="panel">
-  <p>Content for section 2...</p>
+  <p>"During the Covid-19 Pandemic, we the young graduates initiated to help people in need who are hugely affected by the pandemic by providing food."
+    "We started distributing food twice a week and distributed almost 1000+ food packets to needy "
+    By the time we started this, we realized that not only humans but even animals were hugely affected by the pandemic, so we along with helping the needy started to feed the stray pet</p>
 </div>
 
-<button class="accordion">Section 3</button>
+<button class="accordion">03. Values <i class="fa-solid fa-heart"></i></button>
 <div class="panel">
   <p>Content for section 3...</p>
 </div>
@@ -142,10 +151,77 @@
 <!-- Testing the Instagram Embed code added today -->
 
 <div class="instagram">
+    <div class="youtube">
 <!-- <iframe src="//instagram.com/p/bOTI1cPY7z/embed/" width="612" height="710" frameborder="0" scrolling="no" allowtransparency="true"></iframe> -->
 <iframe width="50%" height="540px" src="https://www.youtube.com/embed/QsP7u9ecFf0?si=1EvIfzrHhP1paiQx&autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
+</div>
 
+
+<!--- Contact us ---->
+<div class="contact-us">
+    <div class="cont-us">
+        <h1>Contact us <i class="fa-regular fa-id-card"></i></h1>
+    </div>
+    <div class="container-contact">
+      <div class="contact-box">
+        <div class="left">
+          <iframe class="iframe2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d242.91561286291!2d77.64264576894995!3d13.057948682943413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae17578c79da7d%3A0xe96dcd8e2b982f8e!2sKristu%20Jayanti%20College%2C%20Autonomous!5e0!3m2!1sen!2sin!4v1709880968304!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="right">
+          <h2>Fill in the details <i class="fa-solid fa-pencil"></i></h2>
+          <input type="text" class="field" placeholder="Enter Your Name">
+          <input type="text" class="field" placeholder="Enter Your Email">
+          <input type="text" class="field" placeholder="Enter Your Phone">
+          <textarea placeholder="Message" class="field"></textarea>
+          <button class="btn">Send</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- footer -->
+  <footer class="footer">
+    <div class="footer-left col-md-4 col-sm-6">
+      <p class="about">
+        <span> About the company</span> “Never Doubt that a small group of thoughtful, committed youths can change the world. Indeed it’s the only thing that ever has.”
+      </p>
+      <div class="icons">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-google-plus"></i></a>
+        <a href="#"><i class="fa fa-instagram"></i></a>
+      </div>
+    </div>
+    <div class="footer-center col-md-4 col-sm-6">
+      <div>
+        <i class="fa fa-map-marker"></i>
+        <p><span> Street name and number</span> City, Country</p>
+      </div>
+      <div>
+        <i class="fa fa-phone"></i>
+        <p> (+00) 0000 000 000</p>
+      </div>
+      <div>
+        <i class="fa fa-envelope"></i>
+        <p><a href="#"> office@company.com</a></p>
+      </div>
+    </div>
+    <div class="footer-right col-md-4 col-sm-6">
+      <h2> Company<span> logo</span></h2>
+      <p class="menu">
+        <a href="#"> Home</a> |
+        <a href="#"> About</a> |
+        <a href="#"> Services</a> |
+        <a href="#"> Portfolio</a> |
+        <a href="#"> News</a> |
+        <a href="#"> Contact</a>
+      </p>
+      <p class="name"> Company Name &copy; 2016</p>
+    </div>
+  </footer>
 
 <script src="script.js"></script>
 
