--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
         <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet">
-<!-- google font -->
+    <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Inter:wght@100..900&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0ee8f60b6c.js" crossorigin="anonymous"></script>
 </head>
@@ -19,35 +18,63 @@
 
 <section class="container1">
 <nav>
-    <div class="logo">Brand</div>
-    <label for="" class="menu-btn">
-        <i class="fas fa-bars">
-
-        </i>
-        </i>
-    </label>
+    <div class="logo">
+        <img src="https://dhatripatra.org/assets/images/logo.png" alt="Logo" style="max-width: 100px; max-height: 100px;">
+    </div>
+    
     <ul>
         <li><a class="active"href="#">Home</a></li>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Home</a></li>
+        <li><a href="">Donate</a></li>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Contact us</a></li>
     </ul>
 </nav>
 </section>
 
+
+
 <div class="hero">
 <div class="hero-sec">
     <div class="text">
-    <p class="fadeInUp-animation">For it is in the <br><b><i class="fa-solid fa-hand-holding-hand"></i> giving that</b> <br>we receive <i class="fa-solid fa-circle-arrow-down"></i></p>
+    <p class="fadeInUp-animation">For it is in the <br><b><i id="hero-1" class="fa-solid fa-hand-holding-hand"></i> giving that</b> <br>we receive <i class="fa-solid fa-circle-arrow-down"></i></p>
     <h6 class="fadeInUp-animation">Welcome to our community! At [Company Name], we believe in the transformative<br> power of generosity. For it is in the giving that we receive. Every interaction, every<br> contribution, and every act of kindness enriches not only the giver but also the world<br> around us. Join us as we embark on a journey of compassion, connection, and collective<br> impact. Together, let's make a difference, one heartfelt gesture at a time.</h6>
     </div>
-    <button class="button1">Join Us</button>
-    <button class="button2">Join Us</button>
+    <button class="button1">Sign up</button>
+    <button class="button2">Learn More</button>
 </div>
 <div class="hero-image">
     <img class="image-fade" src="https://images.unsplash.com/photo-1628087730636-ac461db242fc?q=80&w=3387&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="100%" height="100%">
 </div>
 </div>
+
+
+
+
+<!-- marq-text -->
+<div class="container-mar">
+    <marquee width="100%" direction="left" height="100px" loop="infinite" scrollamount="30">
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+    </marquee>
+</div>
+
+
+
+
 <!-- info -->
 <div class="section2">
     <div class="firstbox">
@@ -88,11 +115,11 @@
     </div>
 </div>
 
+
 <div class="image-div">
     <div class="content">
     <div class="image-div-main">
        <div class="image-div1">
-        <p>heloo</p>
 
        </div>
         <div class="image-div2">
@@ -101,7 +128,7 @@
                 <p class="highlight-2">Donate stationery infrastructure, midday meal or books</p>
                 <button id="button-div">Sign up</button>
             </div>
-            <div class="image-div2-2"><p>hello</p></div>
+            <div class="image-div2-2"></div>
         </div>
         </div>
     </div>
@@ -121,12 +148,13 @@
 
 
 <!-- accordion -->
+<div class="accord-main">
 <div class="accordinsection">
     <div class="accordinsection-1">
 <p>About us</p>
     </div>
     <div class="accordinsection-2">
-<button class="accordion">Mission <i class="fa-solid fa-bullseye"></i></button>
+<button class="accordion">01. Mission <i class="fa-solid fa-bullseye"></i></button>
 <div class="panel">
   <p>“Never Doubt that a small group of thoughtful, committed youths can change the world. Indeed it’s 
     the only thing that ever has.” This defines - Dhatri Patra, a non-governmental organisation serving 
@@ -143,9 +171,26 @@
 
 <button class="accordion">03. Values <i class="fa-solid fa-heart"></i></button>
 <div class="panel">
-  <p>Content for section 3...</p>
+  <p>To support the education of orphans,brilliant but needy Children
+    To support the development of deprived Communities.</p>
 </div>
 </div>
+</div>
+</div>
+</div>
+
+<!-- marq-text -->
+<div class="container-mar">
+    <marquee width="100%" direction="left" height="100px" loop="infinite" scrollamount="30">
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+        <span>Become a Volunteer <button id="button-div">Sign up</button></span>
+    </marquee>
 </div>
 
 <!-- Testing the Instagram Embed code added today -->
@@ -156,6 +201,8 @@
 <iframe width="50%" height="540px" src="https://www.youtube.com/embed/QsP7u9ecFf0?si=1EvIfzrHhP1paiQx&autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 </div>
+
+
 
 
 <!--- Contact us ---->
@@ -198,7 +245,7 @@
     <div class="footer-center col-md-4 col-sm-6">
       <div>
         <i class="fa fa-map-marker"></i>
-        <p><span> Street name and number</span> City, Country</p>
+        <p><span>K.Narayanapura, Kothanur</span> Bangalore, India</p>
       </div>
       <div>
         <i class="fa fa-phone"></i>
@@ -210,7 +257,7 @@
       </div>
     </div>
     <div class="footer-right col-md-4 col-sm-6">
-      <h2> Company<span> logo</span></h2>
+        <img src="https://dhatripatra.org/assets/images/logo.png" alt="Logo" style="max-width: 100px; max-height: 100px;">
       <p class="menu">
         <a href="#"> Home</a> |
         <a href="#"> About</a> |
